--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
     <checksum-maven-plugin.version>1.11</checksum-maven-plugin.version>
     <maven-antrun-plugin.version>3.0.0</maven-antrun-plugin.version>
     <spring-boot.version>2.6.6</spring-boot.version>
+    <problem-spring.version>0.27.0</problem-spring.version>
+    <problem-spring-web.version>${problem-spring.version}</problem-spring-web.version>
     <!-- jhipster-needle-maven-property -->
   </properties>
 
@@ -72,6 +74,19 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.zalando</groupId>
+      <artifactId>problem-spring-web</artifactId>
+      <version>${problem-spring-web.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <!-- jhipster-needle-maven-add-dependency -->
     <dependency>
