--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -7,4 +7,19 @@
 spring.application.name=jhipster
 logging.level.com.mycompany.myapp=INFO
 
+# Spring Boot MVC
+server.port=8080
+
+application.exception.details=false
+application.exception.package=org.,java.,net.,javax.,com.,io.,de.,com.mycompany.myapp
+
+# CORS configuration
+# application.cors.allowed-origins=http://localhost:8100,http://localhost:9000
+# application.cors.allowed-methods=*
+# application.cors.allowed-headers=*
+# application.cors.exposed-headers=Authorization,Link,X-Total-Count,X-jhipster-alert,X-jhipster-error,X-jhipster-params
+# application.cors.allow-credentials=true
+# application.cors.max-age=1800
+# application.cors.allowed-origin-patterns=https://*.githubpreview.dev
+
 # jhipster-needle-application-properties
