--- a/src/test/resources/config/application.properties
+++ b/src/test/resources/config/application.properties
@@ -22,4 +22,8 @@ application.cors.allow-credentials=true
 application.cors.max-age=1800
 application.cors.allowed-origin-patterns=https://*.githubpreview.dev
 
+spring.security.user.name=admin
+spring.security.user.password=$2a$12$cRKS9ZURbdJIaRsKDTDUmOrH4.B.2rokv8rrkrQXr2IR2Hkna484O
+spring.security.user.roles=ADMIN
+
 # jhipster-needle-application-test-properties
