--- a/src/main/resources/config/application-local.properties
+++ b/src/main/resources/config/application-local.properties
@@ -15,4 +15,6 @@ application.cors.allow-credentials=true
 application.cors.max-age=1800
 application.cors.allowed-origin-patterns=https://*.githubpreview.dev
 
+# Spring Security JWT
+
 # jhipster-needle-application-local-properties
