--- a/package.json
+++ b/package.json
@@ -1,61 +1,61 @@
 {
   "name": "jhipster",
-  "devDependencies": {
-    "@pinia/testing": "0.0.11",
-    "vue-tsc": "0.34.7",
-    "vue-jest": "5.0.0-alpha.10",
-    "vite": "2.9.5",
-    "typescript": "4.6.3",
-    "ts-jest": "26.5.6",
-    "jest-transform-stub": "2.0.0",
-    "jest-sonar-reporter": "2.0.0",
-    "jest": "26.6.3",
-    "eslint-plugin-vue": "8.6.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint": "8.13.0",
-    "@vue/test-utils": "2.0.0-rc.20",
-    "@vue/eslint-config-typescript": "10.0.0",
-    "@vitejs/plugin-vue": "2.3.1",
-    "@typescript-eslint/parser": "5.19.0",
-    "@types/jest": "27.4.1",
-    "@rushstack/eslint-patch": "1.1.3",
-    "prettier-plugin-packagejson": "2.2.17",
-    "prettier-plugin-java": "1.6.1",
-    "prettier": "2.6.2",
-    "lint-staged": "12.3.8",
-    "husky": "7.0.4",
-    "@prettier/plugin-xml": "2.1.0"
-  },
-  "scripts": {
-    "start": "vite",
-    "jest": "jest src/test/javascript/spec --logHeapUsage --maxWorkers=2 --no-cache",
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build --emptyOutDir",
-    "preview": "vite preview",
-    "test": "npm run jest --",
-    "test:watch": "npm run jest -- --watch",
-    "prepare": "husky install",
-    "prettier:check": "prettier --check \"{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml}\"",
-    "prettier:format": "prettier --write \"{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml}\""
-  },
-  "dependencies": {
-    "pinia-plugin-persist": "1.0.0",
-    "pinia": "2.0.13",
-    "vue-router": "4.0.14",
-    "vue": "3.2.33"
-  },
   "version": "0.0.0",
   "private": true,
   "description": "jhipster project",
   "license": "UNLICENSED",
+  "scripts": {
+    "build": "vue-tsc --noEmit && vite build --emptyOutDir",
+    "dev": "vite",
+    "jest": "jest src/test/javascript/spec --logHeapUsage --maxWorkers=2 --no-cache",
+    "prepare": "husky install",
+    "prettier:check": "prettier --check \"{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml}\"",
+    "prettier:format": "prettier --write \"{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml}\"",
+    "preview": "vite preview",
+    "start": "vite",
+    "test": "npm run jest --",
+    "test:watch": "npm run jest -- --watch"
+  },
+  "dependencies": {
+    "pinia": "2.0.13",
+    "pinia-plugin-persist": "1.0.0",
+    "vue": "3.2.33",
+    "vue-router": "4.0.14"
+  },
+  "devDependencies": {
+    "@pinia/testing": "0.0.11",
+    "@prettier/plugin-xml": "2.1.0",
+    "@rushstack/eslint-patch": "1.1.3",
+    "@types/jest": "27.4.1",
+    "@typescript-eslint/parser": "5.19.0",
+    "@vitejs/plugin-vue": "2.3.1",
+    "@vue/eslint-config-typescript": "10.0.0",
+    "@vue/test-utils": "2.0.0-rc.20",
+    "eslint": "8.13.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-vue": "8.6.0",
+    "husky": "7.0.4",
+    "jest": "26.6.3",
+    "jest-sonar-reporter": "2.0.0",
+    "jest-transform-stub": "2.0.0",
+    "lint-staged": "12.3.8",
+    "prettier": "2.6.2",
+    "prettier-plugin-java": "1.6.1",
+    "prettier-plugin-packagejson": "2.2.17",
+    "ts-jest": "26.5.6",
+    "typescript": "4.6.3",
+    "vite": "2.9.5",
+    "vue-jest": "5.0.0-alpha.10",
+    "vue-tsc": "0.34.7"
+  },
   "engines": {
     "node": ">=16.13.0"
   },
+  "cacheDirectories": [
+    "node_modules"
+  ],
   "jestSonar": {
     "reportPath": "target/test-results/jest",
     "reportFile": "TESTS-results-sonar.xml"
-  },
-  "cacheDirectories": [
-    "node_modules"
-  ]
+  }
 }
