--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "test:watch": "npm run jest -- --watch"
   },
   "dependencies": {
+    "axios": "0.26.1",
     "pinia": "2.0.13",
     "pinia-plugin-persist": "1.0.0",
     "vue": "3.2.33",
     "vue-router": "4.0.14"
   },
   "devDependencies": {
-    "@pinia/testing": "0.0.11",
+    "@pinia/testing": "^0.0.11",
     "@prettier/plugin-xml": "2.1.0",
     "@rushstack/eslint-patch": "1.1.3",
     "@types/jest": "27.4.1",
