--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prettier/plugin-xml": "2.1.0",
     "@rushstack/eslint-patch": "1.1.3",
     "@types/jest": "27.4.1",
+    "@types/sinon": "^10.0.11",
     "@typescript-eslint/parser": "5.19.0",
     "@vitejs/plugin-vue": "2.3.1",
     "@vue/eslint-config-typescript": "10.0.0",
@@ -43,6 +44,7 @@
     "prettier": "2.6.2",
     "prettier-plugin-java": "1.6.1",
     "prettier-plugin-packagejson": "2.2.17",
+    "sinon": "13.0.2",
     "ts-jest": "26.5.6",
     "typescript": "4.6.3",
     "vite": "2.9.5",
