--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <problem-spring.version>0.27.0</problem-spring.version>
     <problem-spring-web.version>${problem-spring.version}</problem-spring-web.version>
     <jjwt.version>0.11.2</jjwt.version>
+    <springdoc-openapi-ui.version>1.6.7</springdoc-openapi-ui.version>
     <!-- jhipster-needle-maven-property -->
   </properties>
 
@@ -109,6 +110,11 @@
       <artifactId>jjwt-jackson</artifactId>
       <version>${jjwt.version}</version>
       <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>${springdoc-openapi-ui.version}</version>
     </dependency>
     <!-- jhipster-needle-maven-add-dependency -->
     <dependency>
