--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -31,4 +31,9 @@ application.security.authentication.jwt.base64-secret=bXktc2VjcmV0LWtleS13aGljaC
 application.security.authentication.jwt.token-validity-in-seconds=86400
 application.security.authentication.jwt.token-validity-in-seconds-for-remember-me=2592000
 
+# Springdoc Configuration
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+
 # jhipster-needle-application-properties
