--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "axios": "0.26.1",
     "pinia": "2.0.13",
-    "pinia-plugin-persist": "1.0.0",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "3.2.33",
     "vue-router": "4.0.14"
   },
